manifests/airflow_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-server
  namespace: airflow
  labels:
    app: airflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-server
  template:
    metadata:
      labels:
        app: airflow-server
    spec:
      containers:
      - name: airflow-server
        image: <your image>
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        resources:
          limits:
            memory: "1024Mi"
          requests:
            memory: "1024Mi"
        command:
          - /entrypoint.sh
          - webserver
        ports:
        - containerPort: 8080
          name: airflow
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-server
  namespace: airflow
  labels:
    app: airflow-server
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: airflow-server
